welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: ')' expected but 'if' found.
	if (Math.abs(a-10)<Math.abs(b-10)) 
        ^